--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -2,10 +2,10 @@
     font-family: 'Gotham';
     src: url('Gotham-Book.eot');
     src: local('Gotham Book'), local('Gotham-Book'),
-        url('/fonts/Gotham-Book.eot') format('embedded-opentype'),
-        url('/fonts/Gotham-Book.woff2') format('woff2'),
-        url('/fonts/Gotham-Book.woff') format('woff'),
-        url('/fonts/Gotham-Book.ttf') format('truetype');
+        url('./../fonts/Gotham-Book.eot') format('embedded-opentype'),
+        url('./../fonts/Gotham-Book.woff2') format('woff2'),
+        url('./../fonts/Gotham-Book.woff') format('woff'),
+        url('./../fonts/Gotham-Book.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -16,10 +16,10 @@
     font-family: 'Gotham';
     src: url('Gotham-Medium.eot');
     src: local('Gotham Medium'), local('Gotham-Medium'),
-        url('/fonts/Gotham-Medium.eot') format('embedded-opentype'),
-        url('/fonts/Gotham-Medium.woff2') format('woff2'),
-        url('/fonts/Gotham-Medium.woff') format('woff'),
-        url('/fonts/Gotham-Medium.ttf') format('truetype');
+        url('./../fonts/Gotham-Medium.eot') format('embedded-opentype'),
+        url('./../fonts/Gotham-Medium.woff2') format('woff2'),
+        url('./../fonts/Gotham-Medium.woff') format('woff'),
+        url('./../fonts/Gotham-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
