--- a/styles/for-gaming.css
+++ b/styles/for-gaming.css
@@ -11,6 +11,7 @@
      background-color: #252A2C;;
      width: 100%;
      cursor: pointer;
+     padding-bottom: 10px;
  }
 
 .game-column{
@@ -126,6 +127,7 @@
         .game-card5,
         .game-card6 {
             aspect-ratio: 9 / 8;
+            padding-bottom: 0px;
         }
         .game-card-items__img {
             width: 100%;
