--- a/styles/article.css
+++ b/styles/article.css
@@ -1,81 +1,121 @@
 
-.article {
-    margin-bottom: 100px;
-}
-.article__cards {
-    display: flex;
-    justify-content: space-between;
-    gap: 16px;
-    
-}
-.title-button{
+
+.title-button {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
 }
 
-.title-button a{
+.title-button a {
     color: #2881f6;
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 10px;
-   
+
 }
 
-.title-button a::after{
-    content: url(./../img/icons/ic-arrow-right.png) ;
+.title-button a::after {
+    content: url(./../img/icons/ic-arrow-right.png);
     margin: 0 0 0 5px;
 }
 
-.article-card {
-    flex-basis: 307px;
-    flex-shrink: 1;
-    max-height: 100%;
+.article-product {
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+.article-products__cards {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0px;
+    
+}
+
+.article-product-card {
     border-radius: 8px;
-    box-shadow: 0px 2px 8px 0px rgba(51, 62, 72, 0.12);
-    margin-bottom: 5px;
+    box-shadow: 0px 2px 8px 0px rgba(51, 62, 72, 0.16);
+    display: flex;
+    max-width: 375px;
     height: initial;
 }
 
-.article-card-item {
-    cursor: pointer;
-    min-width: 170px;
-    height: 100%;
+.article-card-item{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    gap: 8px;
-}
-
-.article-img {
-    max-width: 290px;
-    max-height: 164px;
-}
-
-.article-img img {
+    align-items: center;
+    min-height: 100%;
     width: 100%;
-    height: 100%;
 }
 
-.article-text {
+.article-product-img {
+     width: 100%; 
+}
+.article-product-img img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius:8px 8px 0 0 ;
+}
+
+.article-product-text {
     font-family: Arial;
-    font-size: 16px;
-    font-weight: 400;
+    font-size: 20px;
+    font-weight: 500;
     line-height: 22px;
     letter-spacing: 0.4px;
-    padding: 10px;
+    padding:24px 16px 24px 16px;
+    width: 100%;
 }
-@media(max-width:450px){
-    .section-title-2{
-        text-align: center;
+
+
+@media(max-width:1366px){
+    .article-product-text {
+        font-size: 18px;
+    } 
+}
+
+
+@media(min-width:1000px){
+    .article-product-card{
+        flex-basis: 307px;
+        flex-shrink: 1;
     }
-.title-button a {
-        display: none;
+    .article-products__cards {
+        gap: 16px;
     }
+}
+
+@media(max-width:1000px){
+    .article-card-item {
+        height: 100%;
+    }
+    
+
     .title-button a::after {
-        content: '';
-            margin: 0;
+            content: '';
+        margin: 0;
     }
+
     .article {
         margin-bottom: 70px;
+    }
+    
+}
+@media(max-width:550px){
+    .article-product {
+        margin-top: 280px;
+    }
+        .title-button a {
+            display: none;
+        }
+}
+@media(max-width:450px){
+    .article-product {
+        margin-top: 100px;
+        margin-bottom: 80px;
+    }
+}
+@media(max-width:350px){
+    .article-product {
+        margin-top: 0px;
     }
 }
