--- a/styles/hero.css
+++ b/styles/hero.css
@@ -3,30 +3,31 @@
     margin-top: 40px;
 }
 
+
 .hero-container{
     max-width: 100%;
     max-height: 650px;    
     background: #2F3133;
     border-radius: 16px;
     padding-left: 40px;
-    padding-right: 97px;
+    padding-right: 50px;
     overflow: hidden;
     display: flex;
     align-items: center;
 }
 
-
-.hero-items {
+.slide{
     display: flex;
-    align-items: center;
-    gap: 20px;
-    max-width: 100%;
+        align-items: center;
+        gap: 20px;
+        max-width: 100%;
 }
 
 .hero-items__img{
     display: flex;
     justify-content: flex-end;
     width: 100%;
+    height: 100%;
 }
 
 .wrapper-img{
@@ -80,7 +81,13 @@
         height: 600px;
     }
 }
-@media(max-width:1366px){
+
+@media(max-width:1550px) {
+    .hero-container {
+        height: 500px;
+    }
+}
+@media(max-width:1367px){
   .hero-container {
         height: 480px;
     }
@@ -109,14 +116,36 @@
          font-size: 45px;
          width: 320px;
      }
-    .swiper-slide img {
-        width: 500px;
+    .hero-items__img {
+     width: 270px;
+    }
+}
+@media(max-width:700px){
+  .hero-container {
+        padding-left: 10px;
+    }
+
+     .hero-items__title {
+         font-size: 40px;
+     }  
+     .hero-items__subtitle {
+         font-size: 40px;
+         width: 270px;
+     }
+    .hero-items__img img {
+        width: 100%;
+    }
+    .hero-items__img {
+        width: 250px;
     }
 }
  
-@media(max-width:600px){
+@media(max-width:575px){
     .hero {
             margin-top: 10px;
+        }
+        .wrapper-img{
+            max-width: 100%;
         }
     .hero-items__img {
         display: flex;
@@ -124,11 +153,13 @@
         width: 100%;
     }
     .hero-container {
-        height: 550px;
+        height: 540px;
             padding: 0;
         }
-    .hero-items {
-        display: block;
+    .slide {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .hero-items__text {
@@ -138,20 +169,33 @@
         align-items: center;
     }
     .hero-items__title {
-        padding: 20px;
-        width: 100%;
+        padding: 0px;
+        margin-top: 20px;
+        width: 90%;
         font-size: 40px;
     }
     .hero-items__subtitle {
         max-width: 300px;
         margin-bottom: 20px;
-        font-size: 40px;
-        width: 280px;
+        font-size: 35px;
+        width: 250px;
     }
-    .swiper-slide img {
+    .hero-items__img img{
         width: 100%;
     }
 } 
+@media(max-width:475px) {
+    .hero-container {
+        height: 480px;
+        padding: 0;
+    }
+}
+@media(max-width:375px) {
+    .hero-container {
+        height: 388px;
+        padding: 0;
+    }
+}
 
 
 
