--- a/styles/home-office.css
+++ b/styles/home-office.css
@@ -14,6 +14,10 @@
     width: 100%;
     cursor: pointer;
 }
+.card:hover{
+    background: #4FB7F6;
+    transition: all 0.3s ease;
+}
 
 
 .home-column-1 {
@@ -34,7 +38,7 @@
 
 .card1 {
     height: 60%;
-    background: #4FB7F6;
+   
 }
 
 .card2 {
@@ -95,7 +99,6 @@
     .card1, .card2, .card3, .card4,.card5,.card6{
         aspect-ratio: 10 / 9;
         margin-bottom: 10px;
-        background: #F5F4F4;
     }
 
 }
