--- a/styles/top-product.css
+++ b/styles/top-product.css
@@ -6,39 +6,35 @@
 .top-products__cards {
     display: flex;
     justify-content: space-between;
-    gap: 7px;
-    padding-bottom: 10px;
-    cursor: pointer;
+    padding: 10px 0px;
 }
 
 .top-product-card {
-    margin: 5px;
-    flex-basis: 300px;
-    flex-shrink: 1;
-    border-radius: 16px;
+     border-radius: 8px;
     box-shadow: 0px 2px 8px 0px rgba(51, 62, 72, 0.16);
     display: flex;
-    min-width: 170px;
+    max-width: 375px;
     height: initial;
 }
 
 .card-item{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
-    gap: 8px;
-    padding: 8px;
+    min-height: 100%;
     width: 100%;
 }
 
 .top-product-img {
-    max-width: 290px;
-    max-height: 164px;
+    width: 100%;
+}
+.img-heigth{
+    margin-bottom: 6px;
 }
 .top-product-img img{
+    margin-top: 10px;
     width: 100%;
-    height: 100%;
+    border-radius:8px 8px 0 0 ;
 }
 
 .top-product-text {
@@ -47,23 +43,31 @@
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0.4px;
-    padding: 10px;
+    padding: 24px 16px 16px 16px;
     max-width: 90%;
 }
 
 
 @media(max-width:1120px){
-    .top-product-text {
-        font-size: 14px;
-    }
+
 }
-@media(max-width:980px){
+@media(min-width:1000px){
+     .top-product-card{
+        flex-basis: 307px;
+        flex-shrink: 1;
+    }
+    .top-products__cards {
+        gap: 16px;
+    }
+    
+}
+
+@media(max-width:1000px){
     .card-item {
         height: 100%;
     }
-    .card-margin{
-        margin-right: 50px;
-    }
+    
+    
 }
 @media(max-width:550px){
     .top-product {
