--- a/styles/modal.css
+++ b/styles/modal.css
@@ -5,6 +5,10 @@
 .catalog-item:hover > .modal-list{
     display: initial;
 }
+.catalog-item1:hover > .modal-list{
+    left: auto;
+    right: 0;
+}
 .modal-list{
     display: block;
     position: absolute;
@@ -20,7 +24,6 @@
     background: rgba(244, 244, 246, 0.08);
     backdrop-filter: blur(40px);
 }
-
 
 .modal-list__item {
     height: 25%;
@@ -45,22 +48,39 @@
         width: 260px;
     }
 }
-@media(max-width:800px){
+@media(max-width:900px){
     .modal-list {
         width: 225px;
     }
 }
-@media(max-width:500px){
+@media(max-width:800px){
     .modal-list {
-        top: 45px;
+        top: 40px;
         width: 200px;
     }
 }
-@media(max-width:400px){
+@media(max-width:700px){
     .modal-list {
-        top: 45px;
-        width: 200px;
+        top: 40px;
+        width: 180px;
     }
 }
+@media(max-width:600px){
+    .modal-list {
+        width: 170px;
+    }
+    .modal-list__item a {
+        padding: 5px;
+    }
+}
+@media(max-width:560px){
+    .modal-list {
+        position: fixed;
+        top: 40px;
+        width: 99%;
+        left: 2px;
+    }
+}
+
 
 
