--- a/styles/modal.css
+++ b/styles/modal.css
@@ -55,13 +55,18 @@
 }
 @media(max-width:800px){
     .modal-list {
+        top: 60px;
+        width: 200px;
+    }
+}
+@media(max-width:750px){
+    .modal-list {
         top: 40px;
         width: 200px;
     }
 }
 @media(max-width:700px){
     .modal-list {
-        top: 40px;
         width: 180px;
     }
 }
